--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -2,16 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example </title>
+    <title>Registration </title>
 </head>
 <body style="background-color: dimgrey">
-
-<form action="/login" method="post">
+<div style="color: darkred">
+    {{#message}}
+        {{message}}
+    {{/message}}
+</div>
+<form action="/registration" method="post">
     <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><input type="submit" value="Sign IN"/></div>
 </form>
-<a href="/registration">New user</a>
 </body>
 </html>
